# sadgi-protocol

./: .editorconfig  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  Makefile  README-ARCHITECTURE.md  README-CONTRIBUTING.md  README-OPERATIONS.md  README-dev.md  README.md  SECURITY.md  audit.toml  deny.toml  docker-compose.yml
.agents/: AGENTS.md
.cursor/rules/: design.mdc
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/workflows/: codeql.yml  delivery.yml  pages.yml
cli/sadgi-cli/: Cargo.toml
cli/sadgi-cli/src/: main.rs
contracts/governance/: Cargo.toml
contracts/governance/src/: lib.rs  test.rs
contracts/marketplace/: Cargo.toml
contracts/marketplace/src/: escrow.rs  lib.rs  queue.rs  scheduler.rs  settlement.rs  test.rs
contracts/marketplace/test_snapshots/test/: test_e2e_job_lifecycle.1.json
contracts/registry/: Cargo.toml
contracts/registry/src/: lib.rs
contracts/registry/test_snapshots/test/: test_register_and_get.1.json
contracts/verifier/: Cargo.toml
contracts/verifier/src/: lib.rs
core/sadgi-types/: Cargo.toml
core/sadgi-types/src/: credential.rs  events.rs  lib.rs  program.rs  receipt.rs  state.rs  test.rs  threshold.rs
dashboard/: developer_demo.js  next.config.ts  package-lock.json  package.json
dashboard/app/: globals.css  page.tsx
dashboard/app/api/health/: route.ts
dashboard/app/marketplace/: page.tsx
dashboard/components/: InteractiveDots.tsx  TechMarquee.tsx
docs/: book.toml
docs/src/: SUMMARY.md  api_reference.md  introduction.md  whitepaper.md
docs/src/architecture/: contracts.md  marketplace.md  prover.md  receipt-standard.md  sdk.md  security.md
docs/src/concepts/: claims.md  receipts.md  verifiable_computation.md
docs/src/contributing/: code_of_conduct.md
docs/src/getting_started/: local_environment.md  quick_start.md
docs/src/operations/: prover.md
docs/src/programs/: credit.md  identity.md
docs/src/sdk/: requesting.md  verifying.md
docs/src/specifications/: job-standard.md  program-standard.md  receipt-standard.md
infrastructure/prover-node/: Cargo.toml
infrastructure/prover-node/src/: executor.rs  main.rs  runner.rs  scheduler.rs
programs/credit/: Cargo.toml
programs/credit/src/: main.rs
programs/hash_verification/: Cargo.toml
programs/hash_verification/src/: main.rs
programs/hello_world/: Cargo.toml
programs/hello_world/src/: main.rs
programs/identity/: Cargo.toml
programs/identity/src/: main.rs
prover/: Cargo.toml
prover/node/: Cargo.toml  build.rs
prover/node/src/: backend.rs  executor.rs  main.rs  runner.rs  scheduler.rs
prover/node/tests/: credential.rs
prover/proofs/credential/: Cargo.toml
prover/proofs/credential/src/: main.rs
prover/proofs/hash/: Cargo.toml
prover/proofs/hash/src/: main.rs
prover/proofs/hello_world/: Cargo.toml
prover/proofs/hello_world/src/: main.rs
prover/proofs/reputation/: Cargo.toml
prover/proofs/reputation/src/: main.rs
prover/proofs/signature/: Cargo.toml
prover/proofs/signature/src/: main.rs
prover/proofs/threshold/: Cargo.toml
prover/proofs/threshold/src/: main.rs
scripts/: Cargo.toml  build_soroban_verifier.sh  deploy.sh  local-ci.sh  pre-commit.sh
scripts/src/: generate_verifier.rs  generate_vks.rs
sdk/sadgi-sdk/: Cargo.toml
sdk/sadgi-sdk/src/: client.rs  lib.rs
templates/starter-rust/: Cargo.toml
templates/starter-rust/src/: main.rs
templates/starter-soroban/: Cargo.toml  Makefile
templates/starter-soroban/src/: lib.rs
templates/starter-ts/: index.ts  package.json
