[workspace]
resolver = "2"

members = [
    "core/*",
    "contracts/*",
    "programs/*",
    "sdk/*"
]

exclude = [
    "templates/starter-rust",
    "templates/starter-soroban"
]

[workspace.dependencies]
soroban-sdk = "20.0.0"
risc0-zkvm = { version = "1.0.0", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }


