[workspace]
resolver = "2"

members = [
    "core/*",
    "contracts/*",
    "sdk/*"
]

exclude = [
    "templates/starter-soroban",
    "prover",
    "scripts"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"

[workspace.dependencies]
soroban-sdk = "20.0.0"
serde = { version = "1.0", features = ["derive"] }
