[workspace]
resolver = "2"

members = [
    "core/*",
    "contracts/*",
    "sdk/*"
]

exclude = [
    "templates/starter-soroban",
    "prover",
    "scripts"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"
publish = false

[workspace.dependencies]
soroban-sdk = "27.0.1"
serde = { version = "1.0", features = ["derive"] }
