[workspace]
resolver = "2"

members = [
    "node",
    "proofs/*"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"
publish = false

[workspace.dependencies]
sp1-sdk = "6.3.1"
sp1-zkvm = "6.3.1"
sp1-build = "6.3.1"
serde = { version = "1.0", features = ["derive"] }
