[workspace]

[package]
license.workspace = true
publish.workspace = true
name = "scripts"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generate_vks"
path = "src/generate_vks.rs"

[[bin]]
name = "generate_verifier"
path = "src/generate_verifier.rs"

[dependencies]
sp1-sdk = "6.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
