[package]
license.workspace = true
publish.workspace = true
name = "sadgi-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.32", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
