[package]
name = "sadgi-governance"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { version = "22.0.11" }

[dev_dependencies]
soroban-sdk = { version = "22.0.11", features = ["testutils"] }
