[package]
license.workspace = true
publish.workspace = true
name = "sadgi-marketplace"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sadgi-types = { path = "../../core/sadgi-types" }
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
sadgi-registry = { path = "../registry" }
sadgi-verifier = { path = "../verifier" }
