[package]
name = "sadgi-prover-node"
version = "0.1.0"
edition = "2021"

[dependencies]

tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
sp1-sdk = { workspace = true }
sadgi-types = { path = "../../core/sadgi-types" }

[dev-dependencies]
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
sha2 = "0.10.8"
bincode = "1.3.3"
rand = "0.8.5"
