[package]
license.workspace = true
publish.workspace = true
name = "sadgi-prover-node"
version = "0.1.0"
edition = "2021"

[dependencies]

tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
sp1-sdk = { workspace = true }
sadgi-types = { path = "../../core/sadgi-types", features = ["alloc"] }
ed25519-dalek = { version = "3.0.0", features = ["rand_core"] }

[dev-dependencies]
sha2 = "0.11.0"
bincode = "=3.0.0"
rand = "0.10.2"

[build-dependencies]
sp1-build = { workspace = true }
