[package]
name = "credential"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-zkvm = { workspace = true }
serde = { workspace = true }
bincode = "1.3.3"
sha2 = { version = "0.10.8", default-features = false }
ed25519-dalek = { version = "2.1.1", default-features = false, features = ["alloc"] }
sadgi-types = { path = "../../../core/sadgi-types" }
