[package]
license.workspace = true
publish.workspace = true
name = "threshold"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-zkvm = { workspace = true }
serde = { workspace = true }
bincode = "=3.0.0"
sha2 = { version = "0.11.0", default-features = false }
ed25519-dalek = { version = "3.0.0", default-features = false, features = ["alloc"] }
sadgi-types = { path = "../../../core/sadgi-types", features = ["alloc"] }
